[gd_scene load_steps=26 format=2]

[ext_resource path="res://UI/sprites/beachbg.png" type="Texture2D" id=1]
[ext_resource path="res://Scenes/Oauabae.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/sprites/agency_string.png" type="Texture2D" id=3]
[ext_resource path="res://Scripts/Level_Scripts/String.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Level_Scripts/Agency.gd" type="Script" id=5]
[ext_resource path="res://UI/Fonts/Non_Nunito/domino_font/human_domino.otf" type="FontFile" id=6]
[ext_resource path="res://Scenes/Narration.tscn" type="PackedScene" id=7]
[ext_resource path="res://audio/Agency_Audio/1b. This tool is several things at once…  .wav" type="AudioStream" id=8]
[ext_resource path="res://audio/Agency_Audio/1.a This O shaped tool that looks like a magnifying glass is you...wav" type="AudioStream" id=9]
[ext_resource path="res://Scenes/Level_Scenes/level1.tscn" type="PackedScene" id=10]
[ext_resource path="res://audio/Agency_Audio/2b. This word, Oauabae comes from our oldest human family language… .wav" type="AudioStream" id=11]
[ext_resource path="res://audio/Agency_Audio/2d. The things that you choose to put into your Oauabae...wav" type="AudioStream" id=12]
[ext_resource path="res://audio/Agency_Audio/2c. The word Abu...wav" type="AudioStream" id=13]
[ext_resource path="res://audio/Agency_Audio/3a.-This-magnifying-glass-that-looks-like-the-letter-O…-Energy-of-your-mind..wav" type="AudioStream" id=14]
[ext_resource path="res://audio/Agency_Audio/4. Only you knows the real you… Agency. .wav" type="AudioStream" id=15]
[ext_resource path="res://audio/Agency_Audio/3b.-The-little-spark-of-energy-in-your-Oauabae....wav" type="AudioStream" id=16]
[ext_resource path="res://audio/Agency_Audio/5.-In-this-game-world_-the-world-is-full-of-strings…-.wav" type="AudioStream" id=17]
[ext_resource path="res://audio/Agency_Audio/3d. Move your Oauabae around the shoreline… .wav" type="AudioStream" id=18]
[ext_resource path="res://audio/Agency_Audio/6.-It-represents-your-agency…-.wav" type="AudioStream" id=19]
[ext_resource path="res://audio/Agency_Audio/7.-You-deserve-to-have-a-vision-for-your-life….wav" type="AudioStream" id=20]

[sub_resource type="FontFile" id=5]
size = 28
font_data = ExtResource( 6 )

[sub_resource type="CircleShape2D" id=1]
radius = 63.6427

[sub_resource type="Animation" id=2]
resource_name = "Bounce"
length = 2.0
loop = true

[sub_resource type="Animation" id=3]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.5, 1, 1.5 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.490196, 1, 1, 1 ), Color( 1, 0.490196, 1, 1 ), Color( 1, 1, 0.490196, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0, 1 ),
"transitions": PackedFloat32Array( 0.450625, 1.7411 ),
"update": 0,
"values": [ Vector2( 502.432, 266.664 ), Vector2( 503.294, 224 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Reveal"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.6, 1.9, 4 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 1.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:theme_override_colors/default_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0, 0.5 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Agency" type="Node"]
script = ExtResource( 5 )
next_scene = ExtResource( 10 )

[node name="DialogueBox" type="Polygon2D" parent="."]
position = Vector2( 0, -162 )
scale = Vector2( 1, 1.42188 )
z_index = 1
color = Color( 0.117647, 0.117647, 0.117647, 0.745098 )
polygon = PackedVector2Array( 64, 384, 960, 384, 960, 530.286, 64, 530.286 )

[node name="DialogueText" type="RichTextLabel" parent="DialogueBox"]
offset_left = 88.0
offset_top = 396.0
offset_right = 936.0
offset_bottom = 530.0
theme_override_fonts/normal_font = SubResource( 5 )
text = "helllohello"

[node name="Timer" type="Timer" parent="DialogueBox"]
wait_time = 0.005

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 1 )
expand = true
stretch_mode = 7

[node name="Oauabae" parent="." instance=ExtResource( 2 )]
position = Vector2( 204, -35 )

[node name="String" type="RigidBody2D" parent="."]
visible = false
position = Vector2( 502.432, 266.664 )
gravity_scale = 0.0
script = ExtResource( 4 )

[node name="Sprite2D" type="Sprite2D" parent="String"]
modulate = Color( 1, 1, 0.724254, 1 )
position = Vector2( 0.862095, 8 )
scale = Vector2( 0.33, 0.33 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="String"]
position = Vector2( 0.862099, 8.33353 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="String"]
anims/Bounce = SubResource( 2 )
anims/Color = SubResource( 3 )

[node name="End" type="Timer" parent="."]
wait_time = 2.0

[node name="Narration" parent="." instance=ExtResource( 7 )]
visible = false
theme_override_colors/default_color = Color( 1, 1, 1, 1 )
theme_override_colors/font_shadow_color = Color( 0, 0, 0, 1 )
visible_characters = -1
percent_visible = 1.0

[node name="TextAnimationPlayer" parent="Narration" index="1"]
anims/Reveal = SubResource( 4 )

[node name="Button" type="Button" parent="."]
visible = false
offset_left = 920.0
offset_top = 32.0
offset_right = 992.0
offset_bottom = 104.0

[node name="AudioStreamPlayer1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
bus = "Narration"

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
bus = "Narration"

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="AudioStreamPlayer4" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )

[node name="AudioStreamPlayer5" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[node name="AudioStreamPlayer6" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )

[node name="AudioStreamPlayer7" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )

[node name="AudioStreamPlayer8" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )

[node name="AudioStreamPlayer9" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )

[node name="AudioStreamPlayer10" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 19 )

[node name="AudioStreamPlayer11" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 20 )

[node name="AudioStreamPlayer12" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )

[node name="AudioStreamPlayer13" type="AudioStreamPlayer" parent="."]

[node name="AudioStreamPlayer14" type="AudioStreamPlayer" parent="."]

[connection signal="timeout" from="DialogueBox/Timer" to="." method="_on_Timer_timeout"]
[connection signal="mouse_entered" from="String" to="Oauabae" method="_on_String_mouse_entered"]
[connection signal="mouse_entered" from="String" to="String" method="_on_String_mouse_entered"]
[connection signal="timeout" from="End" to="." method="_on_End_timeout"]
[connection signal="animation_finished" from="Narration/TextAnimationPlayer" to="." method="_on_TextAnimationPlayer_animation_finished"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]

[editable path="Narration"]
